# pytest-ci-harness

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pytest_ci_harness/: __init__.py  ai.py  cli.py  parser.py
tests/: test_ai.py  test_cli.py  test_parser.py
